--- a/index.html
+++ b/index.html
@@ -85,21 +85,12 @@
         </div>
       </section>
 
-      <section class="section split">
-        <div>
-          <div class="section__head">
-            <h2>Наша команда</h2>
-            <p>Коллективное фото или коллаж с лицами участников.</p>
-          </div>
-          <div class="photo">Добавьте фотографию команды</div>
+      <section class="section">
+        <div class="section__head">
+          <h2>Наша команда</h2>
+          <p>Коллективное фото или коллаж с лицами участников.</p>
         </div>
-        <div>
-          <div class="section__head">
-            <h2>Облако слов</h2>
-            <p>Мотиватор о географии и информатике, выполненный в Words Cloud.</p>
-          </div>
-          <div class="photo">Вставьте изображение облака слов</div>
-        </div>
+        <div class="photo">Добавьте фотографию команды</div>
       </section>
 
       <section class="section">
@@ -120,6 +111,16 @@
             сервисов. Мы участвуем, потому что нам нравится мыслить точно, творчески
             и вместе.
           </p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="section__head">
+          <h2>Облако слов</h2>
+          <p>Мотиватор о географии и информатике, выполненный в Words Cloud.</p>
+        </div>
+        <div class="photo photo--image">
+          <img src="b05ab85c-55c4-42ee-a9a7-b22b8ff78d05.png" alt="Облако слов" />
         </div>
       </section>
     </main>
