--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
           <h2>Наша команда</h2>
           <p>Коллективное фото или коллаж с лицами участников.</p>
         </div>
-        <div class="photo">Добавьте фотографию команды</div>
+        <div class="photo photo--image">
+          <img src="photo_2026-02-19_08-03-18 (2).jpg" alt="Фотография команды" />
+        </div>
       </section>
 
       <section class="section">
