--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p>Коллективное фото или коллаж с лицами участников.</p>
         </div>
         <div class="photo photo--image">
-          <img src="photo_2026-02-19_08-03-18 (2).jpg" alt="Фотография команды" />
+          <img src="photo_2026-02-19_08-03-18 (2).png" alt="Фотография команды" />
         </div>
       </section>
 
