--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
           <h2>Наша команда</h2>
           <p>Коллективное фото или коллаж с лицами участников.</p>
         </div>
-        <div class="photo photo--image">
-          <img src="photo_2026-02-19_08-03-18 (2).png" alt="Фотография команды" />
+        <div class="photo photo-collage">
+          <img src="photo_2026-02-19_08-03-17.png" alt="Команда: фото 1" />
+          <img src="photo_2026-02-19_08-03-17 (2).png" alt="Команда: фото 2" />
+          <img src="photo_2026-02-19_08-03-18.png" alt="Команда: фото 3" />
+          <img src="photo_2026-02-19_08-03-18 (2).png" alt="Команда: фото 4" />
         </div>
       </section>
 
