--- a/index.html
+++ b/index.html
@@ -106,16 +106,28 @@
         <div class="essay">
           <p>
             Информатика для нас — это язык, на котором можно рассказывать о мире.
-            Мы учимся собирать данные, видеть закономерности и превращать их в карты,
-            модели и истории. География помогает чувствовать пространство, а алгоритмы
-            дают инструменты, чтобы это пространство понять и бережно исследовать.
+            Мы учимся собирать данные, видеть закономерности и превращать их в карты, модели и истории.
+            География помогает чувствовать пространство, а алгоритмы дают инструменты, чтобы это пространство понять и бережно исследовать.
+         </p>
+         <p>
+            Когда мы изучаем математику и информатику, мы открываем для себя удивительную логику, которая стоит за каждым явлением природы и общества.
+            Геоинформационные системы позволяют нам визуализировать данные о рельефе, климате, населении и ресурсах, делая сложное понятным и наглядным. 
+            Это не просто цифры в таблицах — это живая модель планеты, которую можно анализировать, чтобы принимать обоснованные решения и прогнозировать будущее.
+         </p> 
+         <p>
+            Мы восхищаемся тем, как информатика помогает географии стать точной наукой. 
+            Спутниковые снимки, глобальные базы данных, навигационные приложения и системы мониторинга окружающей среды — всё это результат слияния информационных технологий и географических знаний. 
+            В нашей школе мы стремимся понять эти процессы на практике: строим модели, работаем с реальными данными, учимся программировать и представлять информацию так, чтобы она была полезна и понятна другим людям.
+         </p>
+         <p>
+            Участие в проекте «Компьютерная фантазия» — это возможность проявить себя, показать, что современная школа готовит не просто исполнителей, а мыслящих специалистов, способных решать сложные задачи. 
+            Мы хотим доказать, что география и информатика неразделимы в эпоху больших данных и умных технологий.
+            Нам нравится мыслить точно, творчески и вместе, потому что только так рождаются по-настоящему значимые идеи.
+            Информатика учит нас анализировать, структурировать и оптимизировать.
+            География учит видеть взаимосвязи, понимать масштабы и ценить разнообразие мира.
+            Вместе эти науки делают нас ответственными исследователями, готовыми внести вклад в развитие технологий и сохранение нашей планеты для будущих поколений.
           </p>
           <p>
-            В проекте мы хотим показать, что современные технологии раскрывают красоту
-            нашей планеты: от маршрутов до климатических карт, от статистики до умных
-            сервисов. Мы участвуем, потому что нам нравится мыслить точно, творчески
-            и вместе.
-          </p>
         </div>
       </section>
 
@@ -135,3 +147,4 @@
     </footer>
   </body>
 </html>
+
