--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="content.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="backdrop">
+      <div class="glow glow--a"></div>
+      <div class="glow glow--b"></div>
+      <div class="grid"></div>
+    </div>
     <header class="hero">
       <div class="hero__content">
         <p class="hero__badge">Проектная работа команды</p>
@@ -106,28 +111,38 @@
         <div class="essay">
           <p>
             Информатика для нас — это язык, на котором можно рассказывать о мире.
-            Мы учимся собирать данные, видеть закономерности и превращать их в карты, модели и истории.
-            География помогает чувствовать пространство, а алгоритмы дают инструменты, чтобы это пространство понять и бережно исследовать.
-         </p>
-         <p>
-            Когда мы изучаем математику и информатику, мы открываем для себя удивительную логику, которая стоит за каждым явлением природы и общества.
-            Геоинформационные системы позволяют нам визуализировать данные о рельефе, климате, населении и ресурсах, делая сложное понятным и наглядным. 
-            Это не просто цифры в таблицах — это живая модель планеты, которую можно анализировать, чтобы принимать обоснованные решения и прогнозировать будущее.
-         </p> 
-         <p>
-            Мы восхищаемся тем, как информатика помогает географии стать точной наукой. 
-            Спутниковые снимки, глобальные базы данных, навигационные приложения и системы мониторинга окружающей среды — всё это результат слияния информационных технологий и географических знаний. 
-            В нашей школе мы стремимся понять эти процессы на практике: строим модели, работаем с реальными данными, учимся программировать и представлять информацию так, чтобы она была полезна и понятна другим людям.
-         </p>
-         <p>
-            Участие в проекте «Компьютерная фантазия» — это возможность проявить себя, показать, что современная школа готовит не просто исполнителей, а мыслящих специалистов, способных решать сложные задачи. 
-            Мы хотим доказать, что география и информатика неразделимы в эпоху больших данных и умных технологий.
-            Нам нравится мыслить точно, творчески и вместе, потому что только так рождаются по-настоящему значимые идеи.
-            Информатика учит нас анализировать, структурировать и оптимизировать.
-            География учит видеть взаимосвязи, понимать масштабы и ценить разнообразие мира.
-            Вместе эти науки делают нас ответственными исследователями, готовыми внести вклад в развитие технологий и сохранение нашей планеты для будущих поколений.
+            Мы учимся собирать данные, видеть закономерности и превращать их в карты,
+            модели и истории. География помогает чувствовать пространство, а алгоритмы
+            дают инструменты, чтобы это пространство понять и бережно исследовать.
           </p>
           <p>
+            Когда мы изучаем математику и информатику, мы открываем для себя удивительную логику,
+            которая стоит за каждым явлением природы и общества. Геоинформационные системы позволяют
+            нам визуализировать данные о рельефе, климате, населении и ресурсах, делая сложное
+            понятным и наглядным. Это не просто цифры в таблицах — это живая модель планеты,
+            которую можно анализировать, чтобы принимать обоснованные решения и прогнозировать будущее.
+          </p>
+          <p>
+            Мы восхищаемся тем, как информатика помогает географии стать точной наукой. Спутниковые
+            снимки, глобальные базы данных, навигационные приложения и системы мониторинга окружающей
+            среды — всё это результат слияния информационных технологий и географических знаний.
+            В нашей школе мы стремимся понять эти процессы на практике: строим модели, работаем
+            с реальными данными, учимся программировать и представлять информацию так, чтобы она
+            была полезна и понятна другим людям.
+          </p>
+          <p>
+            Участие в проекте «Компьютерная фантазия» — это возможность проявить себя, показать,
+            что современная школа готовит не просто исполнителей, а мыслящих специалистов, способных
+            решать сложные задачи. Мы хотим доказать, что география и информатика неразделимы в эпоху
+            больших данных и умных технологий. Нам нравится мыслить точно, творчески и вместе, потому
+            что только так рождаются по-настоящему значимые идеи.
+          </p>
+          <p>
+            Информатика учит нас анализировать, структурировать и оптимизировать. География учит
+            видеть взаимосвязи, понимать масштабы и ценить разнообразие мира. Вместе эти науки
+            делают нас ответственными исследователями, готовыми внести вклад в развитие технологий
+            и сохранение нашей планеты для будущих поколений.
+          </p>
         </div>
       </section>
 
@@ -140,6 +155,16 @@
           <img src="b05ab85c-55c4-42ee-a9a7-b22b8ff78d05.png" alt="Облако слов" />
         </div>
       </section>
+
+      <section class="section">
+        <div class="section__head">
+          <h2>Страницы проекта</h2>
+          <p>Навигация по материалам проекта «Компьютерная фантазия»</p>
+        </div>
+        <div class="nav-links">
+          <a href="informatika.html" class="nav-button">Информатика без границ →</a>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -147,4 +172,3 @@
     </footer>
   </body>
 </html>
-
