--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
         <div class="list">
           <div class="list__row">
             <span class="list__name">Мальков Михаил — 8 класс</span>
-            <a href="#" class="list__link">Личный сайт</a>
+            <a href="#" class="list__link">Личный сайт (в разработке)</a>
           </div>
           <div class="list__row">
             <span class="list__name">Болдырев Всеволод — 8 класс</span>
-            <a href="#" class="list__link">Личный сайт</a>
+            <a href="#" class="list__link">Личный сайт (в разработке)</a>
           </div>
           <div class="list__row">
             <span class="list__name">Салтанова Ангелина — 8 класс</span>
-            <a href="#" class="list__link">Личный сайт</a>
+            <a href="#" class="list__link">Личный сайт (в разработке)</a>
           </div>
         </div>
       </section>
@@ -158,3 +158,4 @@
     </footer>
   </body>
 </html>
+
